# todo-gql

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
docs/: db.puml
migrations/2023-08-05-103220_create-user/: up.sql
migrations/2023-08-05-103242_create-todo/: up.sql
migrations/2023-08-05-103245_create-category-lookup/: down.sql  up.sql
migrations/2023-08-05-103247_create-category/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  query_root.rs  schema.rs
src/models/: category.rs  category_lookup.rs  mod.rs  new_user.rs  todo.rs  user.rs
src/mutation/: create_todo.rs  mod.rs  sign_up.rs
src/query/: login.rs  mod.rs  query_root.rs
