[package]
edition = "2021"
name = "todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = "6.0"
async-graphql-actix-web = "6.0"
chrono = "0.4"
diesel = {version = "2.1.0", features = ["postgres", "chrono", "uuid"]}
diesel-async = {version = "0.3", features = ["deadpool", "postgres"]}
diesel_migrations = {version = "2.1", features = ["postgres"]}
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
uuid = {version = "1.4", features = ["v4"]}
